syntax = "proto3";

option go_package = "local/hub";

package hub;

message Client {
    string name = 1;
    string connectionTime = 2;
    string uptime = 3;
}

service Hub {
    rpc ListClients (HubListClientsRequest) returns (HubListClientsResponse);
    rpc StreamActivityFeed (HubActivityFeedRequest) returns (stream ActivityEvent);
}

message HubListClientsRequest {
}

message HubListClientsResponse {
    int64 count = 1;
    repeated Client clients = 2;
}

message HubActivityFeedRequest {
}

message ActivityEvent {
    string message = 1;
}
